--- a/app/src/main/res/layout/activity_specialist_login.xml
+++ b/app/src/main/res/layout/activity_specialist_login.xml
@@ -110,7 +110,7 @@
         app:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <TextView
-        android:id="@+id/forgotPaswword"
+        android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password"
